[lworld] SubTypeCheckNode::sub asserts with "should be not null"

XMLWordPrintable

      Similar to JDK-8315744 but a different issue.

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (workspace/open/src/hotspot/share/opto/subtypenode.cpp:37), pid=3000504, tid=3000521
      # assert(sub_t != Type::TOP && !TypePtr::NULL_PTR->higher_equal(sub_t)) failed: should be not null
      #
      # JRE version: Java(TM) SE Runtime Environment (22.0) (fastdebug build 22-lworld4ea-2023-11-14-1257358.tobias.hartmann.valhalla)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 22-lworld4ea-2023-11-14-1257358.tobias.hartmann.valhalla, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0x15fd634] SubTypeCheckNode::sub(Type const*, Type const*) const+0x714

      Current CompileTask:
      C2: 8258 1407 !b 4 compiler.valhalla.inlinetypes.TestNullableInlineTypes::test74_verifier (214 bytes)

      Stack: [0x0000ffff84334000,0x0000ffff84532000], sp=0x0000ffff8452cb70, free space=2018k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x15fd634] SubTypeCheckNode::sub(Type const*, Type const*) const+0x714 (subtypenode.cpp:37)
      V [libjvm.so+0x15fe360] SubTypeCheckNode::verify(PhaseGVN*)+0x170 (subtypenode.cpp:201)
      V [libjvm.so+0x15ff290] SubTypeCheckNode::Ideal(PhaseGVN*, bool)+0x320 (subtypenode.cpp:135)
      V [libjvm.so+0x145a4f4] PhaseIterGVN::transform_old(Node*)+0xf0 (phaseX.cpp:667)
      V [libjvm.so+0x1451428] PhaseIterGVN::optimize()+0x98 (phaseX.cpp:1045)
      V [libjvm.so+0x93a1f8] Compile::inline_incrementally_cleanup(PhaseIterGVN&)+0x168 (compile.cpp:2548)
      V [libjvm.so+0x93aa7c] Compile::inline_incrementally(PhaseIterGVN&)+0x2ec (compile.cpp:2597)
      V [libjvm.so+0x93c2a8] Compile::Optimize()+0x268 (compile.cpp:2729)
      V [libjvm.so+0x93f5ec] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1538 (compile.cpp:863)
      V [libjvm.so+0x783090] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x110 (c2compiler.cpp:119)
      V [libjvm.so+0x94b064] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x8e4 (compileBroker.cpp:2276)
      V [libjvm.so+0x94ba94] CompileBroker::compiler_thread_loop()+0x594 (compileBroker.cpp:1944)
      V [libjvm.so+0xdf846c] JavaThread::thread_main_inner()+0xec (javaThread.cpp:721)
      V [libjvm.so+0x16824b4] Thread::call_run()+0xb0 (thread.cpp:217)
      V [libjvm.so+0x13c7408] thread_native_entry(Thread*)+0x138 (os_linux.cpp:783)

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: