8320080: [lworld] SubTypeCheckNode::sub asserts with "should be not null"